removed unused stock pictures; added experience images; made changes throughout

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -9,3 +9,7 @@
 "Blum":
   - firstname: ["Avrim"]
     url: https://home.ttic.edu/~avrim/
+
+"Silva":
+  - firstname: ["Cesar"]
+    url: https://web.williams.edu/Mathematics/csilva/
